<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme2"
    tools:context=".ArtistActivity">

    <ImageView
        android:id="@+id/imageViewArtistLoading"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_loading_final" />

    <ProgressBar
        android:id="@+id/progressBarArtistLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ScrollView
        android:id="@+id/scrollViewArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewABG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_placeholder" />

            <ImageView
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewABG"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewABG"
                app:srcCompat="@drawable/art_placeholder" />

            <TextView
                android:id="@+id/textViewArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/display_reg"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/theme3"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageViewProfilePicture"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfilePicture"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

            <TextView
                android:id="@+id/textViewAleternateNames"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/display_reg"
                android:gravity="center"
                android:textColor="@color/theme1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textViewArtistName"
                app:layout_constraintStart_toStartOf="@+id/textViewArtistName"
                app:layout_constraintTop_toBottomOf="@+id/textViewArtistName" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/display_reg"
                android:textColor="@color/theme1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAboutLabelAA" />

            <TextView
                android:id="@+id/textViewReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/theme2"
                android:fontFamily="@font/display_reg"
                android:gravity="start"
                android:text="@string/read_more_Default"
                android:textColor="@color/theme3"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textViewDescription"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewArtistSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMPSLAbel" />

            <TextView
                android:id="@+id/textViewMPSLAbel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/display_reg"
                android:text="@string/songs_title"
                android:textColor="@color/theme3"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/textViewDescription"
                app:layout_constraintStart_toStartOf="@+id/textViewDescription"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <ImageView
                android:id="@+id/imageViewHomeArtist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home_icon" />

            <TextView
                android:id="@+id/textViewAboutLabelAA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/display_reg"
                android:text="@string/about"
                android:textColor="@color/theme3"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAleternateNames" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

</androidx.constraintlayout.widget.ConstraintLayout>